// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach appsecret_proof if appSecret option given 1`] = `
Object {
  "access_token": "_fb_graph_api_access_token_",
  "appsecret_proof": "c3d9a02ac88561d9721b3cb2ba338c933f0666b68ad29523393b830b3916cd91",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"name\\":\\"messenger:default:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"name\\":\\"messenger:default:id:foo-2\\",\\"depends_on\\":\\"messenger:default:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"name\\":\\"messenger:default:id:foo-3\\",\\"depends_on\\":\\"messenger:default:id:foo-2\\",\\"omit_response_on_success\\":false}]",
  "include_headers": "false",
}
`;

exports[`attach appsecret_proof if appSecret option given 2`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::0",
      "value": Object {
        "id": 1,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::1",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::2",
      "value": Object {
        "id": 3,
      },
    },
  ],
  "jobs": Array [
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=1",
        "depends_on": undefined,
        "method": "POST",
        "name": "messenger:default:id:foo-1",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=2",
        "depends_on": "messenger:default:id:foo-1",
        "method": "POST",
        "name": "messenger:default:id:foo-2",
        "omit_response_on_success": false,
        "relative_url": "bar/baz",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=3",
        "depends_on": "messenger:default:id:foo-2",
        "method": "POST",
        "name": "messenger:default:id:foo-3",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
  ],
  "message": Object {
    "$$typeof": Symbol(machinat.element),
    "props": Object {
      "children": Array [
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 1,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 2,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 3,
          },
          "type": [Function],
        },
      ],
    },
    "type": Symbol(machinat.element.fragment),
  },
  "results": Array [
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
  ],
}
`;

exports[`sends ok 1`] = `
Object {
  "access_token": "_graph_api_access_token_",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"name\\":\\"messenger:default:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"name\\":\\"messenger:default:id:foo-2\\",\\"depends_on\\":\\"messenger:default:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"name\\":\\"messenger:default:id:foo-3\\",\\"depends_on\\":\\"messenger:default:id:foo-2\\",\\"omit_response_on_success\\":false}]",
  "include_headers": "false",
}
`;

exports[`sends ok 2`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::0",
      "value": Object {
        "id": 1,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::1",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::2",
      "value": Object {
        "id": 3,
      },
    },
  ],
  "jobs": Array [
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=1",
        "depends_on": undefined,
        "method": "POST",
        "name": "messenger:default:id:foo-1",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=2",
        "depends_on": "messenger:default:id:foo-1",
        "method": "POST",
        "name": "messenger:default:id:foo-2",
        "omit_response_on_success": false,
        "relative_url": "bar/baz",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=3",
        "depends_on": "messenger:default:id:foo-2",
        "method": "POST",
        "name": "messenger:default:id:foo-3",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
  ],
  "message": Object {
    "$$typeof": Symbol(machinat.element),
    "props": Object {
      "children": Array [
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 1,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 2,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 3,
          },
          "type": [Function],
        },
      ],
    },
    "type": Symbol(machinat.element.fragment),
  },
  "results": Array [
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
  ],
}
`;

exports[`upload files with form data if binary attached on job 1`] = `
"-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_0\\"

_file0_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_1\\"; filename=\\"YouDontSay.jpg\\"
Content-Type: image/jpeg

_file1_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"access_token\\"

_graph_api_access_token_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"include_headers\\"

false
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"batch\\"

[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"name\\":\\"messenger:default:id:foo-----MULTIPART_SEPARATOR-----\\",\\"attached_files\\":\\"file_0\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"name\\":\\"messenger:default:id:foo-----MULTIPART_SEPARATOR-----\\",\\"depends_on\\":\\"messenger:default:id:foo-----MULTIPART_SEPARATOR-----\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"name\\":\\"messenger:default:id:foo-----MULTIPART_SEPARATOR-----\\",\\"depends_on\\":\\"messenger:default:id:foo-----MULTIPART_SEPARATOR-----\\",\\"attached_files\\":\\"file_1\\",\\"omit_response_on_success\\":false}]
-----MULTIPART_SEPARATOR-------
"
`;

exports[`upload files with form data if binary attached on job 2`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::0",
      "value": Object {
        "id": 1,
        Symbol(machinat.messenger.job.attached_file_data): "_file0_",
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::1",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$::2",
      "value": Object {
        "id": 3,
        Symbol(machinat.messenger.job.attached_file_data): "_file1_",
        Symbol(machinat.messenger.job.attached_file_info): Object {
          "contentType": "image/jpeg",
          "filename": "YouDontSay.jpg",
          "knownLength": 19806,
        },
      },
    },
  ],
  "jobs": Array [
    Object {
      "attachedFileData": "_file0_",
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": "file_0",
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=1",
        "depends_on": undefined,
        "method": "POST",
        "name": "messenger:default:id:foo-1",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": undefined,
      "attachedFileInfo": undefined,
      "request": Object {
        "attached_files": undefined,
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=2",
        "depends_on": "messenger:default:id:foo-1",
        "method": "POST",
        "name": "messenger:default:id:foo-2",
        "omit_response_on_success": false,
        "relative_url": "bar/baz",
      },
      "threadId": "messenger:default:id:foo",
    },
    Object {
      "attachedFileData": "_file1_",
      "attachedFileInfo": Object {
        "contentType": "image/jpeg",
        "filename": "YouDontSay.jpg",
        "knownLength": 19806,
      },
      "request": Object {
        "attached_files": "file_1",
        "body": "recipient=%7B%22id%22%3A%22foo%22%7D&id=3",
        "depends_on": "messenger:default:id:foo-2",
        "method": "POST",
        "name": "messenger:default:id:foo-3",
        "omit_response_on_success": false,
        "relative_url": "me/messages",
      },
      "threadId": "messenger:default:id:foo",
    },
  ],
  "message": Object {
    "$$typeof": Symbol(machinat.element),
    "props": Object {
      "children": Array [
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 1,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 2,
          },
          "type": [Function],
        },
        Object {
          "$$typeof": Symbol(machinat.element),
          "props": Object {
            "id": 3,
          },
          "type": [Function],
        },
      ],
    },
    "type": Symbol(machinat.element.fragment),
  },
  "results": Array [
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
    Object {
      "body": "{\\"message_id\\":\\"xxx\\",\\"recipient_id\\":\\"xxx\\"}",
      "code": 200,
    },
  ],
}
`;
